--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="video.other">
     <meta property="og:title" content="Say Gex">
-    <meta property="og:image" content="https://saygex.gay/gex.gif">
+    <meta property="og:image" content="https://saygex.gay/gex_new.gif">
     <meta property="og:url" content="https://saygex.gay">
     <meta name="twitter:card" content="summary_large_image">
     <title>Document</title>
@@ -27,6 +27,6 @@
     </style>
 </head>
 <body>
-    <img src="https://saygex.gay/gex.gif" alt="rainbow heart">
+    <img src="https://saygex.gay/gex_new.gif" alt="rainbow heart">
 </body>
 </html>
