--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
             background-color: aqua;
         }
     
-        img {
+        div {
             display: block;
+            background-image: url("https://saygex.gay/gex_new.gif");
             image-rendering: pixelated;
             transform: scale(10);
+        }
+
+        div:hover {
+            background-image: url("https://saygex.gay/sibex.gif");
+        }
+
+        div:active {
+            background-image: url("https://saygex.gay/sranstex.gif");
         }
     </style>
 </head>
 <body>
-    <img src="https://saygex.gay/gex_new.gif" alt="rainbow heart">
+    <!-- <img src="https://saygex.gay/gex_new.gif" alt="rainbow heart"> -->
+     <div></div>
 </body>
 </html>
