--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         }
     
         div {
+            width: 100%;
+            height: 100%;
             display: block;
             background-image: url("https://saygex.gay/gex_new.gif");
             image-rendering: pixelated;
-            transform: scale(10);
+            background-size: contain;
         }
 
         div:hover {
