--- a/index.html
+++ b/index.html
@@ -15,30 +15,33 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            width: 100%;
             margin: 0;
             background-color: aqua;
         }
     
         div {
-            width: 100%;
-            height: 100%;
-            display: block;
-            background-image: url("https://saygex.gay/gex_new.gif");
+            display: flex;
+            width: 70%;
+            min-height: 90vh;
+            background-image: url("gex_new.gif");
             image-rendering: pixelated;
             background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
 
         div:hover {
-            background-image: url("https://saygex.gay/sibex.gif");
+            background-image: url("sibex.gif");
         }
 
         div:active {
-            background-image: url("https://saygex.gay/sranstex.gif");
+            background-image: url("sranstex.gif");
         }
     </style>
 </head>
 <body>
     <!-- <img src="https://saygex.gay/gex_new.gif" alt="rainbow heart"> -->
-     <div></div>
+    <div></div>
 </body>
 </html>
