Update sibex colors, add prefetch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta property="og:image" content="https://saygex.gay/gex_new.gif">
     <meta property="og:url" content="https://saygex.gay">
     <meta name="twitter:card" content="summary_large_image">
+    <link rel="prefetch" href="gex_new.gif">
+    <link rel="prefetch" href="sibex.gif">
+    <link rel="prefetch" href="sranstex.gif">
     <title>Document</title>
     <style>
         body {
