--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <meta property="og:image" content="https://saygex.gay/gex_new.gif">
     <meta property="og:url" content="https://saygex.gay">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="prefetch" href="gex_new.gif">
-    <link rel="prefetch" href="sibex.gif">
-    <link rel="prefetch" href="sranstex.gif">
-    <title>Document</title>
+    <title>Gex</title>
     <style>
         body {
             display: flex;
@@ -33,18 +30,32 @@
             background-repeat: no-repeat;
             background-position: center;
         }
-
-        div:hover {
-            background-image: url("sibex.gif");
-        }
-
-        div:active {
-            background-image: url("sranstex.gif");
-        }
     </style>
 </head>
 <body>
-    <!-- <img src="https://saygex.gay/gex_new.gif" alt="rainbow heart"> -->
     <div></div>
+    <script>
+        // Preload images
+        const images = ["gex_new.gif", "sibex.gif", "sranstex.gif"];
+        const preloadedImages = images.map(src => {
+            const img = new Image();
+            img.src = src;
+            return img;
+        });
+
+        const div = document.querySelector('div');
+        let currentImageIndex = 0;
+
+        // Function to change the background image and synchronize the GIFs
+        function changeBackgroundImage(index) {
+            div.style.backgroundImage = `url(${images[index]})`;
+            currentImageIndex = index;
+        }
+
+        div.addEventListener('mouseover', () => changeBackgroundImage(1));
+        div.addEventListener('mouseout', () => changeBackgroundImage(0));
+        div.addEventListener('mousedown', () => changeBackgroundImage(2));
+        div.addEventListener('mouseup', () => changeBackgroundImage(1));
+    </script>
 </body>
 </html>
