Basic clicker site w/o responsivity

--- a/index.html
+++ b/index.html
@@ -9,53 +9,34 @@
     <meta property="og:url" content="https://saygex.gay">
     <meta name="twitter:card" content="summary_large_image">
     <title>Gex</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            width: 100%;
-            margin: 0;
-            background-color: aqua;
-        }
-    
-        div {
-            display: flex;
-            width: 70%;
-            min-height: 90vh;
-            background-image: url("gex_new.gif");
-            image-rendering: pixelated;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-    </style>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div></div>
-    <script>
-        // Preload images
-        const images = ["gex_new.gif", "sibex.gif", "sranstex.gif"];
-        const preloadedImages = images.map(src => {
-            const img = new Image();
-            img.src = src;
-            return img;
-        });
+    <header>
+        <div class="currency">
+            <img src="sibex-static.png" alt="">
+            <p>123</p>
+        </div>
+        <div class="currency">
+            <img src="gex_new-static.png" alt="">
+            <p>123</p>
+        </div>
+        <div class="currency">
+            <img src="sranstex-static.png" alt="">
+            <p>123</p>
+        </div>
+    </header>
+    <main>
 
-        const div = document.querySelector('div');
-        let currentImageIndex = 0;
-
-        // Function to change the background image and synchronize the GIFs
-        function changeBackgroundImage(index) {
-            div.style.backgroundImage = `url(${images[index]})`;
-            currentImageIndex = index;
-        }
-
-        div.addEventListener('mouseover', () => changeBackgroundImage(1));
-        div.addEventListener('mouseout', () => changeBackgroundImage(0));
-        div.addEventListener('mousedown', () => changeBackgroundImage(2));
-        div.addEventListener('mouseup', () => changeBackgroundImage(1));
-    </script>
+    </main>
+    <nav>
+        <a href="./store.html"><i class="fa-solid fa-store"></i></a>
+        <a href="./info.html"><i class="fa-solid fa-circle-info"></i></a>
+    </nav>
 </body>
 </html>
