Added alt text for currencies

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
     <header>
         <div class="currency">
-            <img src="sibex-static.png" alt="">
+            <img src="sibex-static.png" alt="bi heart">
             <p>123</p>
         </div>
         <div class="currency">
-            <img src="gex_new-static.png" alt="">
+            <img src="gex_new-static.png" alt="rainbow heart">
             <p>123</p>
         </div>
         <div class="currency">
-            <img src="sranstex-static.png" alt="">
+            <img src="sranstex-static.png" alt="trans heart">
             <p>123</p>
         </div>
     </header>
