CSS fixes, wiki main page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     </main>
     <nav>
-        <a href="./store.html"><i class="fa-solid fa-store"></i></a>
-        <a href="./info.html"><i class="fa-solid fa-circle-info"></i></a>
+        <a href="store.html"><i class="fa-solid fa-store"></i></a>
+        <a href="wiki.html"><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 </body>
 </html>
