--- a/store.html
+++ b/store.html
@@ -205,8 +205,8 @@
     </main>
 
     <nav>
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <a href="./info.html"><i class="fa-solid fa-circle-info"></i></a>
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="wiki.html"><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 </body>
 </html>
