--- a/wiki.html
+++ b/wiki.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://saygex.gay">
     <meta name="twitter:card" content="summary_large_image">
     <title>Gex</title>
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
