--- a/store.html
+++ b/store.html
@@ -24,11 +24,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -37,11 +37,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -50,11 +50,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -63,11 +63,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -76,11 +76,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -89,11 +89,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -102,11 +102,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -115,11 +115,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -128,11 +128,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -141,11 +141,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -154,11 +154,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -167,11 +167,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -180,11 +180,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
@@ -193,11 +193,11 @@
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
-                    <img src="gex_old.gif" alt="" class="item-image">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
                 </div>
                 <div class="item-status">
-                    <p class="item-cost"><img src="sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
