--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <body>
     <header>
         <div class="currency">
-            <img src="/public/images/sibex-static.png" alt="bi heart">
+            <img src="/public/images/sibex-static.png" alt="bi">
             <p>123</p>
         </div>
         <div class="currency">
-            <img src="/public/images/gex_new-static.png" alt="rainbow heart">
+            <img src="/public/images/gex_new-static.png" alt="gay">
             <p>123</p>
         </div>
         <div class="currency">
-            <img src="/public/images/sranstex-static.png" alt="trans heart">
+            <img src="/public/images/sranstex-static.png" alt="trans">
             <p>123</p>
         </div>
     </header>
