--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="twitter:card" content="summary_large_image">
     <title>Gex</title>
     <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="/public/styles/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/public/styles/index.css">
 </head>
 <body>
     <header>
