--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/index.css">
+    <link rel="stylesheet" href="/public/styles/topo-pattern.css">
 </head>
-<body>
+<body class="topography-pattern">
     <header>
         <div class="currency">
             <img src="/public/images/sibex-static.png" alt="bi">
@@ -39,5 +40,7 @@
         <a href="store.html"><i class="fa-solid fa-store"></i></a>
         <a href="wiki.html"><i class="fa-solid fa-circle-info"></i></a>
     </nav>
+
+    <script src="/scripts/game-index.js"></script>
 </body>
 </html>
