--- a/store.html
+++ b/store.html
@@ -16,8 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/store.css">
+    <link rel="stylesheet" href="/public/styles/topo-pattern.css">
 </head>
-<body>
+<body class="topography-pattern">
     <main>
         <h1>Shop</h1>
         <hr>
