--- a/wiki.html
+++ b/wiki.html
@@ -16,34 +16,40 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/wiki.css">
+    <link rel="stylesheet" href="/public/styles/topo-pattern.css">
 </head>
-<body>
-    <main>
+<body class="topography-pattern">
+    <div class="content">
         <h1>Saygex.gay wiki</h1>
         <hr>
-        <article>
+        <main>
             <h2>What is this about?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam reiciendis laboriosam modi? Placeat aliquam sunt vel accusamus omnis impedit quasi libero eaque vitae. Ab laboriosam dolore labore dignissimos accusantium. Accusamus!</p>
-            <h2>Wiki contents</h2>
-            <section>
+            <p>
+                This site is a queer-themed clicker game I made as my final project in webapps class.
+                Below is an exhaustive links to articles primarily explaining the inside-ish jokes involved,
+                plus some other info.
+            </p>
+            <h2>Joke explanations</h2>
+            <article>
                 <a href="info/placeholder.html">Some very interesting article</a>
                 <p>This article provides some details about this very interesting queer thing.</p>
-            </section>
-            <section>
+            </article>
+            <article>
                 <a href="info/placeholder.html">Something else</a>
                 <p>This article, for a change, is something else. The something else in question has a very long summary, which serves to serve as a multi-line placeholder to show wrapping.</p>
-            </section>
-            <section>
+            </article>
+            <h2>General queer info</h2>
+            <article>
                 <a href="info/placeholder.html">Why are you gae?</a>
                 <p>"Why are you gay?" is a question that has been haunting humanity for a long time. Why don't we answer it?</p>
-            </section>
-            <section>
+            </article>
+            <article>
                 <a href="info/placeholder.html">I'm out of ideas</a>
                 <p>Thinking of placeholders is hard</p>
-            </section>
+            </article>
             <h2>Done reading?</h2>
             <a href="index.html">You can return to the clicker</a>
-        </article>
-    </main>
+        </main>
+    </dib>
 </body>
 </html>
