Fix content mistake

--- a/wiki.html
+++ b/wiki.html
@@ -26,7 +26,7 @@
             <h2>What is this about?</h2>
             <p>
                 This site is a queer-themed clicker game I made as my final project in webapps class.
-                Below is an exhaustive links to articles primarily explaining the inside-ish jokes involved,
+                Below is an exhaustive list of links to articles primarily explaining the inside-ish jokes involved,
                 plus some other info.
             </p>
             <h2>Joke explanations</h2>
