restyle wiki article

--- a/info/placeholder.html
+++ b/info/placeholder.html
@@ -21,11 +21,6 @@
 </head>
 <body class="topography-pattern">
     <div class="content">
-        <nav>
-            <a id="prev" href="/wiki.html"><- Back</a>
-            <a href="/wiki.html">Home</a>
-            <a id="next" href="/wiki.html">Next -></a>
-        </nav>
         <h1>Example article</h1>
         <hr>
         <main>
@@ -39,12 +34,31 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </aside>
             </section>
+            <h2>3nd subtitle</h2>
+            <section class="paragraph-with-aside">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae nostrum, veniam aspernatur asperiores ad mollitia eveniet, adipisci officiis minima earum saepe cumque rerum ea laboriosam velit totam veritatis debitis ullam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto aliquam, deleniti ducimus eligendi dolor qui ipsum voluptate labore veniam esse libero facere, repellat quidem molestiae reprehenderit ad mollitia asperiores laudantium!</p>
+                <aside>
+                    <h3>Long Note</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </aside>
+            </section>
+            <section class="paragraph-with-aside">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae nostrum, veniam aspernatur asperiores ad mollitia eveniet, adipisci officiis minima earum saepe cumque rerum ea laboriosam velit totam veritatis debitis ullam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto aliquam, deleniti ducimus eligendi dolor qui ipsum voluptate labore veniam esse libero facere, repellat quidem molestiae reprehenderit ad mollitia asperiores laudantium!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae nostrum, veniam aspernatur asperiores ad mollitia eveniet, adipisci officiis minima earum saepe cumque rerum ea laboriosam velit totam veritatis debitis ullam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto aliquam, deleniti ducimus eligendi dolor qui ipsum voluptate labore veniam esse libero facere, repellat quidem molestiae reprehenderit ad mollitia asperiores laudantium!
+                </p>
+                <aside>
+                    <h3>Note</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </aside>
+            </section>
         </main>
         <div class="bottom">
             <nav>
-                <a id="prev" href="/wiki.html"><- Back</a>
-                <a href="/wiki.html">Home</a>
-                <a id="next" href="/wiki.html">Next -></a>
+                <a id="prev" href="/wiki.html"><i class="fa-solid fa-chevron-left"></i> Placeholder</a>
+                <a id="home" href="/wiki.html"><i class="fa-solid fa-house"></i></a>
+                <a id="next" href="/wiki.html">Article <i class="fa-solid fa-chevron-right"></i></a>
             </nav>
         </div>
     </div>
