Link to achievements on index

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </main>
     <nav>
         <a href="store.html"><i class="fa-solid fa-store"></i></a>
+        <a href="achievements.html"><i class="fa-solid fa-trophy"></i></a>
         <a href="wiki.html"><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 
