--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
             <p>123</p>
         </div>
     </header>
-    <main>
-
-    </main>
+    <main id="clicker-heart"></main>
     <nav>
         <a href="store.html"><i class="fa-solid fa-store"></i></a>
         <a href="achievements.html"><i class="fa-solid fa-trophy"></i></a>
