--- a/achievements.html
+++ b/achievements.html
@@ -61,8 +61,8 @@
     </main>
 
     <nav>
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <a href="wiki.html"><i class="fa-solid fa-circle-info"></i></a>
+        <a href="index.html"><p>Back</p><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 </body>
 </html>
