--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +15,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/index.css">
     <link rel="stylesheet" href="/public/styles/topo-pattern.css">
 </head>
+
 <body class="topography-pattern">
     <header>
         <div class="currency">
@@ -35,11 +38,12 @@
     </header>
     <main id="clicker-heart"></main>
     <nav>
-        <a href="store.html"><i class="fa-solid fa-store"></i></a>
-        <a href="achievements.html"><i class="fa-solid fa-trophy"></i></a>
-        <a href="wiki.html"><i class="fa-solid fa-circle-info"></i></a>
+        <a href="store.html"><p>Store</p><i class="fa-solid fa-store"></i></a>
+        <a href="achievements.html"><p>Achievements</p><i class="fa-solid fa-trophy"></i></a>
+        <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 
     <script src="/scripts/game-index.js"></script>
 </body>
+
 </html>
