Light mode and toolbar improvements

--- a/achievements.html
+++ b/achievements.html
@@ -58,11 +58,12 @@
             </div>
             <p class="achiev-desc">You can achieve this by ...</p>
         </div>
+        <footer>
+            <nav>
+                <a href="index.html"><p>Back</p><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
+            </nav>
+        </footer>
     </main>
-
-    <nav>
-        <a href="index.html"><p>Back</p><i class="fa-solid fa-arrow-left"></i></a>
-        <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
-    </nav>
 </body>
 </html>
