--- a/store.html
+++ b/store.html
@@ -204,11 +204,12 @@
             </div>
             <p class="item-amount">Owned: 123</p>
         </div>
+        <footer>
+            <nav>
+                <a href="index.html"><p>Back</p><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
+            </nav>
+        </footer>
     </main>
-
-    <nav>
-        <a href="index.html"><p>Back</p><i class="fa-solid fa-arrow-left"></i></a>
-        <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
-    </nav>
 </body>
 </html>
