--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <body class="topography-pattern">
     <header>
         <div class="currency">
-            <img src="/public/images/sibex-static.png" alt="bi">
+            <img src="/public/images/sibex-static.png" alt="bi" id="bi-img">
             <p>123</p>
         </div>
         <div class="currency">
-            <img src="/public/images/gex_new-static.png" alt="gay">
+            <img src="/public/images/gex_new-static.png" alt="gay" id="gay-img">
             <p>123</p>
         </div>
         <div class="currency">
-            <img src="/public/images/sranstex-static.png" alt="trans">
+            <img src="/public/images/sranstex-static.png" alt="trans" id="trans-img">
             <p>123</p>
         </div>
     </header>
@@ -43,7 +43,7 @@
         <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 
-    <script src="/scripts/game-index.js"></script>
+    <script src="/scripts/game-animations.js"></script>
 </body>
 
 </html>
