--- a/store.html
+++ b/store.html
@@ -27,182 +27,97 @@
                 <div class="item-info">
                     <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
+                    <p>(12)</p>
                 </div>
                 <div class="item-status">
                     <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
-            <p class="item-amount">Owned: 123</p>
         </div>
+        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
                     <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
+                    <p>(12)</p>
                 </div>
                 <div class="item-status">
                     <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
-            <p class="item-amount">Owned: 123</p>
         </div>
+        <hr>
+        <div class="shop-item">
+            <div class="item-info-container">
+                <div class="item-info">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
+                    <p class="item-name">Placeholder</p>
+                    <p>(1)</p>
+                </div>
+                <div class="item-status">
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="shop-item">
+            <div class="item-info-container">
+                <div class="item-info">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
+                    <p class="item-name">Placeholder Item Item</p>
+                    <p>(123)</p>
+                </div>
+                <div class="item-status">
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="shop-item">
+            <div class="item-info-container">
+                <div class="item-info">
+                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
+                    <p class="item-name">Item</p>
+                    <p>(12)</p>
+                </div>
+                <div class="item-status">
+                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
+                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
+                </div>
+            </div>
+        </div>
+        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
                     <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
+                    <p>(12)</p>
                 </div>
                 <div class="item-status">
                     <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
-            <p class="item-amount">Owned: 123</p>
         </div>
+        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
                     <img src="/public/images/gex_old.gif" alt="" class="item-image">
                     <p class="item-name">Placeholder Item</p>
+                    <p>(12)</p>
                 </div>
                 <div class="item-status">
                     <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-            <p class="item-amount">Owned: 123</p>
         </div>
         <footer>
             <nav>
