--- a/store.html
+++ b/store.html
@@ -34,8 +34,8 @@
                     <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
+            <p class="item-desc">Increases x by y</p>
         </div>
-        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
@@ -49,7 +49,6 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
@@ -63,7 +62,6 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
@@ -77,7 +75,6 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
@@ -91,7 +88,6 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
@@ -105,7 +101,6 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="shop-item">
             <div class="item-info-container">
                 <div class="item-info">
