--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/index.css">
     <link rel="stylesheet" href="/public/styles/topo-pattern.css">
+    <link rel="stylesheet" href="public/styles/currency-header.css">
 </head>
 
 <body class="topography-pattern">
     <header>
-        <div class="currency">
-            <img src="/public/images/sibex-static.png" alt="bi" id="bi-img">
+        <div class="currency" id="bi-coin">
+            <img src="/public/images/sibex-static.png" alt="bi">
             <p>123</p>
+            <p></p>
         </div>
-        <div class="currency">
-            <img src="/public/images/gex_new-static.png" alt="gay" id="gay-img">
+        <div class="currency" id="gay-coin">
+            <img src="/public/images/gex_new-static.png" alt="gay">
             <p>123</p>
+            <p></p>
         </div>
-        <div class="currency">
-            <img src="/public/images/sranstex-static.png" alt="trans" id="trans-img">
+        <div class="currency" id="trans-coin">
+            <img src="/public/images/sranstex-static.png" alt="trans">
             <p>123</p>
+            <p></p>
         </div>
     </header>
     <main id="clicker-heart"></main>
