--- a/store.html
+++ b/store.html
@@ -17,8 +17,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/store.css">
     <link rel="stylesheet" href="/public/styles/topo-pattern.css">
+    <link rel="stylesheet" href="public/styles/currency-header.css">
 </head>
 <body class="topography-pattern">
+    <header>
+        <div class="currency" id="bi-coin">
+            <img src="/public/images/sibex-static.png" alt="bi">
+            <p>123</p>
+            <p></p>
+        </div>
+        <div class="currency" id="gay-coin">
+            <img src="/public/images/gex_new-static.png" alt="gay">
+            <p>123</p>
+            <p></p>
+        </div>
+        <div class="currency" id="trans-coin">
+            <img src="/public/images/sranstex-static.png" alt="trans">
+            <p>123</p>
+            <p></p>
+        </div>
+    </header>
     <main>
         <h1>Shop</h1>
         <hr>
