Get ready for gameplay

--- a/index.html
+++ b/index.html
@@ -26,18 +26,23 @@
     <header>
         <div class="currency" id="bi-coin">
             <img src="/public/images/sibex-static.png" alt="bi">
-            <p>123</p>
-            <p></p>
+            <p id="bi-amount">123</p>
+            <p id="bi-gain" class="change"></p>
         </div>
         <div class="currency" id="gay-coin">
             <img src="/public/images/gex_new-static.png" alt="gay">
-            <p>123</p>
-            <p></p>
+            <p id="gay-amount">123</p>
+            <p id="gay-gain" class="change"></p>
         </div>
         <div class="currency" id="trans-coin">
             <img src="/public/images/sranstex-static.png" alt="trans">
-            <p>123</p>
-            <p></p>
+            <p id="trans-amount">123</p>
+            <p id="trans-gain" class="change"></p>
+        </div>
+        <div class="currency" id="poly-coin">
+            <img src="/public/images/poly.webp" alt="poly">
+            <p id="poly-amount">0</p>
+            <p id="poly-gain" class="change"></p>
         </div>
     </header>
     <main id="clicker-heart"></main>
