Remove placeholder values

--- a/store.html
+++ b/store.html
@@ -23,22 +23,22 @@
     <header>
         <div class="currency" id="bi-coin">
             <img src="/public/images/sibex-static.png" alt="bi">
-            <p id="bi-amount">123</p>
+            <p id="bi-amount"></p>
             <p id="bi-gain" class="change"></p>
         </div>
         <div class="currency" id="gay-coin">
             <img src="/public/images/gex_new-static.png" alt="gay">
-            <p id="gay-amount">123</p>
+            <p id="gay-amount"></p>
             <p id="gay-gain" class="change"></p>
         </div>
         <div class="currency" id="trans-coin">
             <img src="/public/images/sranstex-static.png" alt="trans">
-            <p id="trans-amount">123</p>
+            <p id="trans-amount"></p>
             <p id="trans-gain" class="change"></p>
         </div>
         <div class="currency" id="poly-coin">
             <img src="/public/images/poly.webp" alt="poly">
-            <p id="poly-amount">0</p>
+            <p id="poly-amount"></p>
             <p id="poly-gain" class="change"></p>
         </div>
     </header>
@@ -58,84 +58,6 @@
                 </div>
             </div>
             <p class="item-desc">Increases x by y</p>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                    <p>(12)</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder</p>
-                    <p>(1)</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item Item</p>
-                    <p>(123)</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Item</p>
-                    <p>(12)</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                    <p>(12)</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
-        </div>
-        <div class="shop-item">
-            <div class="item-info-container">
-                <div class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <p class="item-name">Placeholder Item</p>
-                    <p>(12)</p>
-                </div>
-                <div class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </div>
-            </div>
         </div>
         <footer>
             <nav>
