--- a/achievements.html
+++ b/achievements.html
@@ -22,22 +22,24 @@
     <main>
         <h1>Achievements</h1>
         <hr>
-        <div class="achievement">
+        <article class="achievement">
             <div class="achiev-info-container">
-                <div class="achiev-info">
+                <section class="achiev-info">
                     <img src="/public/images/gex_old.gif" alt="" class="achiev-image">
-                    <p class="achiev-name">Do some stuff</p>
-                </div>
-                <div class="achiev-status">
+                    <h2 class="achiev-name">Do some stuff</p>
+                </section>
+                <section class="achiev-status">
                     <p class="achiev-done"><i class="fa-solid fa-square-check"></i></p>
-                </div>
+                </section>
             </div>
             <p class="achiev-desc">You can achieve this by ...</p>
-        </div>
+        </article>
         <footer>
             <nav>
-                <a href="index.html"><p>Back</p><i class="fa-solid fa-arrow-left"></i></a>
-                <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
+                <ul>
+                    <li><a href="index.html"><p>Back</p><i class="fa-solid fa-arrow-left"></i></a></li>
+                    <li><a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a></li>
+                </ul>
             </nav>
         </footer>
     </main>
