Improve wiki nav

--- a/info/placeholder.html
+++ b/info/placeholder.html
@@ -56,9 +56,11 @@
         </main>
         <div class="bottom">
             <nav>
-                <a id="prev" href="/wiki.html"><i class="fa-solid fa-chevron-left"></i> Placeholder</a>
-                <a id="home" href="/wiki.html"><i class="fa-solid fa-house"></i></a>
-                <a id="next" href="/wiki.html">Article <i class="fa-solid fa-chevron-right"></i></a>
+                <ul>
+                    <li><a id="prev" href="/wiki.html"><i class="fa-solid fa-chevron-left"></i> Placeholder</a></li>
+                    <li><a id="home" href="/wiki.html"><i class="fa-solid fa-house"></i></a></li>
+                    <li><a id="next" href="/wiki.html">Article <i class="fa-solid fa-chevron-right"></i></a></li>
+                </ul>
             </nav>
         </div>
     </div>
