--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </nav>
 
     <script src="/scripts/game-animations.js"></script>
+    <script src="/scripts/game-currencies.js"></script>
 </body>
 
 </html>
