--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
 <body class="topography-pattern">
     <header>
         <ul>
-            <li class="currency" id="bi-coin">
+            <li class="currency" id="bi">
                 <img src="/public/images/sibex-static.png" alt="bi">
                 <p id="bi-amount"></p>
                 <p id="bi-gain" class="change"></p>
             </li>
-            <li class="currency" id="gay-coin">
+            <li class="currency" id="gay">
                 <img src="/public/images/gex_new-static.png" alt="gay">
                 <p id="gay-amount"></p>
                 <p id="gay-gain" class="change"></p>
             </li>
-            <li class="currency" id="trans-coin">
+            <li class="currency" id="trans">
                 <img src="/public/images/sranstex-static.png" alt="trans">
                 <p id="trans-amount"></p>
                 <p id="trans-gain" class="change"></p>
             </li>
-            <li class="currency" id="poly-coin">
+            <li class="currency" id="poly">
                 <img src="/public/images/poly.webp" alt="poly">
                 <p id="poly-amount"></p>
                 <p id="poly-gain" class="change"></p>
